# xbRA

./: CMakeLists.txt  MouseClick.c  MouseClick.csproj  Program.cs  Readme.md  RedAlertClicker.csproj  nuget.config  xb.c  xb.cpp  xbRA.cs  xbRA.csproj
.github/workflows/: build.yml
src/: clicker.cpp
